--- a/src/Spritzer.css
+++ b/src/Spritzer.css
@@ -1,58 +1,38 @@
-*, body, button, input, textarea, select {
-  text-rendering: optimizeLegibility;
-  -moz-osx-font-smoothing: grayscale;
-}
 
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td {
-  margin:0;
-  padding:0;
-}
-table {
-  border-collapse:collapse;
-  border-spacing:0;
-}
-fieldset,img {
-  border:0;
-}
-address,caption,cite,code,dfn,em,strong,th,var {
-  font-style:normal;
-  font-weight:normal;
-}
-ol,ul {
-  list-style:none;
-}
-caption,th {
-  text-align:left;
-}
-h1,h2,h3,h4,h5,h6 {
-  font-size:100%;
-  font-weight:normal;
-}
-q:before,q:after {
-  content:'';
-}
-abbr,acronym { border:0;}
-
-/*.spritzed {
-    padding: 30px;
-    position: relative;
-}
-
-*/
 body.night-mode {
   background-color: #000;
   color: #fff;
+}
+#current-paragraph{
+  font-size: large;
+}
+#current-paragraph span{
+  float: left;
+  padding-left: 5px;
+}
+#current-paragraph span.focus{
+  color: red;
+}
+#current-paragraph-wrapper{
+  margin-top: 50px;
+}
+#paragraphs{
+  text-align: right;
+}
+.sprtizer-wrapper{
+  margin-top: 200px;
 }
 .spritzed::before, .spritzed::after {
     content: "";
     display: block;
     position: absolute;
-    left: 50%;
+    left: 48.7%;
     margin-left: -1px;
     height: 10px;
     background-color: red;
     width: 2px;
     top: 0;
+    margin-bottom: -15px;
 }
 
 .spritzed::after {
@@ -68,19 +48,10 @@ body.night-mode {
     color: #c00;
 }
 
-text{
-	display: none;
-}
 #mydiv {
-    top: 50%;
-    left: 50%;
-    width:30em;
     height:8em;
-    margin-top: -3em; /*set to a negative number 1/2 of your height*/
-    margin-left: -15em; /*set to a negative number 1/2 of your width*/
+    margin-top: -3em; 
     border: 1px 0px 1px 0px solid #ccc;
-    /*background-color: #f3f3f3;*/
-    position:fixed;
 }
 h1{
   text-align: center;
@@ -88,16 +59,4 @@ vertical-align: middle;
 line-height: -3em;   
 font-weight: 300;
 font-size: 6em;
-}
-button {
-    width: 200px;
-    height: 100px;
-}
-#Proximo{
-
-    float: right;
-}
-#Voltar{
-
-    float: left;
 }
